5주차 세션 완료

--- a/hw/week05/src/main/resources/application.properties
+++ b/hw/week05/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://springboot-database.cm9ypg7uup4i.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
+spring.datasource.username=oayenn
+spring.datasource.password=estanque01!
+spring.jpa.hibernate.ddl-auto=update
